Fix some cases where Mathjax whitespace formatting is destroyed

--- a/ts/editable/editable-base.scss
+++ b/ts/editable/editable-base.scss
@@ -19,6 +19,10 @@ anki-editable {
     }
 }
 
+anki-mathjax {
+    white-space: pre;
+}
+
 p {
     margin-top: 0;
     margin-bottom: 1rem;
